Prep for adding mongoDB

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "start": "node --watch ./server.js",
+    "mongo": "mongod --dbpath ./data/db",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
