--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
   },
   "scripts": {
     "start": "node --watch ./server.js",
-    "mongo": "mongod --dbpath ./data/db",
+    "mongo": "mongod --dbpath ./data/db --port 27017",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.6.1"
   }
